# yapytools

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  tasks.py
docs/: conf.py  index.rst
src/: yapytools.py
src/yapytools/: __init__.py  predicates.py  yapytools.py
tests/: test_associate.py  test_count.py  test_filter.py  test_filters.py  test_find.py  test_flat.py  test_group_by.py  test_maps.py  test_pipe.py  test_ranges.py  test_stream.py
